src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Account_Billing_Country__c</fullName>
        <formula>Account.BillingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Billing Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Billing_State__c</fullName>
        <description>For contact view (need to isolate NY only for Yotam&apos;s team)</description>
        <formula>Account.BillingState</formula>
        <label>Account Billing State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Lead_Source__c</fullName>
        <formula>IF(ISBLANK(TEXT(LeadSource)),Account.Name&amp;&quot; (N/A)&quot;,Account.Name&amp;&quot; (&quot;&amp;TEXT(LeadSource)&amp;&quot;)&quot;)</formula>
        <label>Account (Lead Source)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Level__c</fullName>
        <description>For use in contact views</description>
        <formula>TEXT(Account.Account_Level__c)</formula>
        <label>Account Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_MSA__c</fullName>
        <formula>Account.Metropolitan_Statistical_Area__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account MSA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name_text__c</fullName>
        <formula>Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name (text)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner_User_Safe_ID__c</fullName>
        <formula>Account.Account_Owner_User_Safe_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner User Safe ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_RainKing_ID__c</fullName>
        <formula>Account.RainKing_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account RainKing ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Reason_for_Flag__c</fullName>
        <formula>Account.Reason_for_Flag__c</formula>
        <label>Account Reason for Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Safe_ID__c</fullName>
        <formula>Account.Account_Safe_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Safe ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Status__c</fullName>
        <formula>Account.Status__c</formula>
        <label>Account Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <formula>TEXT(Account.Type)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ace_Certification__c</fullName>
        <label>Ace Certification</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ace</fullName>
                </value>
                <value>
                    <fullName>Ace Pro</fullName>
                </value>
                <value>
                    <fullName>Ace Champ</fullName>
                </value>
                <value>
                    <fullName>Ace Master: Cloud</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Acquisition_Date__c</fullName>
        <label>Acquisition Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Acquisition_Program__c</fullName>
        <label>Acquisition Program</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active_Contact_Manual__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Manual Override for Active Contact Formula</description>
        <label>Active Contact (Manual)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Active_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Active Lookup</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Active Contacts</relationshipLabel>
        <relationshipName>Active_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active_Partner__c</fullName>
        <formula>Account.Active_Partner__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active Partner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Addt_l_Third_Party_Asset_Download_Name__c</fullName>
        <description>for Corey 3PT</description>
        <label>Addt&apos;l Third Party Asset Download Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alliance_BD_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Alliance/BD Opportunity</label>
        <referenceTo>Alliance_BD_Opportunity__c</referenceTo>
        <relationshipLabel>BD Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assistant_Email__c</fullName>
        <label>Assistant Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Auto_Email_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto-Email Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__Contact_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__Full_Name__c</fullName>
        <formula>FirstName &amp; &apos; &apos; &amp; LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bad_lead_source_for_merge__c</fullName>
        <formula>if(or(find(&quot;Acquirelists&quot;,text(LeadSource))&gt;0, 
find(&quot;iSell&quot;,text(LeadSource))&gt;0, 
find(&quot;isell&quot;,text(LeadSource))&gt;0, 
find(&quot;CCL: Higher Ed (Red Base Interactive)&quot;,text(LeadSource))&gt;0, 
find(&quot;CCL: Top 500 Internet Retailers&quot;,text(LeadSource))&gt;0), 
&quot;Bad&quot;,&quot;Good&quot;)</formula>
        <label>Bad lead source (for merge)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Blog_Site__c</fullName>
        <label>Blog Site</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Blogger_Day_Job__c</fullName>
        <label>Blogger Day Job</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Blogger_Type__c</fullName>
        <label>Blogger Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Blog Sponsorship</fullName>
                </value>
                <value>
                    <fullName>Independent</fullName>
                </value>
                <value>
                    <fullName>Vendor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Development_Contact_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Development Contact Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Development_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Business Development Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Development_Prospect__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Business Development Prospect</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Driver__c</fullName>
        <description>Values come from VHM form</description>
        <label>Business Driver</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Overprovisioned Infrastructure and Inefficiency</fullName>
                </value>
                <value>
                    <fullName>Growth in Environment Complexity</fullName>
                </value>
                <value>
                    <fullName>Service Degradation/Downtime</fullName>
                </value>
                <value>
                    <fullName>Troubleshooting/Proactive Monitoring</fullName>
                </value>
                <value>
                    <fullName>Administrative Costs (High Admin:Workload Ratio)</fullName>
                </value>
                <value>
                    <fullName>Properly Utilizing Automation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CFCR_Exclude_From_Campaign_Influence__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked this record will be excluded from Full Circle Campaign Influence Calculations</description>
        <inlineHelpText>When checked this record will be excluded from Full Circle Campaign Influence Calculations</inlineHelpText>
        <label>Exclude From Campaign Influence</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CFCR_FCCRM_Threshold__c</fullName>
        <description>Full Circle CRM Engagement Threshold. Modify this formula as your requirements change.</description>
        <formula>/*the value in this field is compared against the configured Full Circle CRM engagement score*/
/*modify this formula as your company&apos;s engagement threshold changes*/
100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Full Circle CRM Engagement Threshold. Modify this formula as your requirements change.</inlineHelpText>
        <label>FCCRM Threshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CFCR_Response__c</fullName>
        <description>Indicates if you need to add a sales campaign to work this contact or to create an opportunity. Add an additional response only if you need to create an additional opportunity.</description>
        <formula>/*VIEW STATIC RESOURCES AND UPDATE LINKS*/ 
IF (
OR( /*inactive status values*/
ISPICKVAL( Contact_Status__c , &quot;Suspect&quot;),
ISPICKVAL( Contact_Status__c , &quot;Customer&quot;),
ISPICKVAL( Contact_Status__c , &quot;Closed&quot;)),
IMAGE(&quot;/resource/1443845578000/fccrm_Add_Campaign_Image&quot;,&quot;Add a Campaign&quot;,16,180),
IF (
ISPICKVAL( Contact_Status__c , &quot;Active Opportunity (System Value)&quot;), /*active opportunity status value */
IMAGE(&quot;/resource/1443845578000/fccrm_Additional_Response_Image&quot;,&quot;Additional Opportunity Requires Campaign&quot;,16,180),IMAGE(&quot;/resource/1443845578000/fccrm_Has_Campaign_Image&quot;,&quot;Has Campaign&quot;,16,180)))</formula>
        <inlineHelpText>Indicates if you need to add a sales campaign to work this contact or to create an opportunity. Add an additional response only if you need to create an additional opportunity.</inlineHelpText>
        <label>Response:</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_to_downloader_overdue__c</fullName>
        <formula>IF(AND(ISNULL(First_Free_Version_Activation_Date__c),ISNULL(First_Full_Version_Download_Date__c)),&quot;No&quot;,
IF(AND(

OR(ISNULL(Last_Dial_Date__c),TODAY()-Last_Dial_Date__c&gt;MIN(NOW()-First_Free_Version_Activation_Date__c, NOW()-First_Full_Version_Download_Date__c)+10),

MIN(NOW()-First_Free_Version_Activation_Date__c,NOW()-First_Full_Version_Download_Date__c)&gt;5,

TEXT(Contact_Status__c)=&quot;Actively prospecting&quot;),&quot;Yes&quot;,&quot;No&quot;))</formula>
        <label>Call to downloader overdue?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Callback_Date__c</fullName>
        <label>Callback Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Concierge_Routing_Reason__c</fullName>
        <label>Concierge Routing Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Downloaded 30 Day</fullName>
                </value>
                <value>
                    <fullName>Downloaded Ops Man Lite</fullName>
                </value>
                <value>
                    <fullName>Downloaded VHM</fullName>
                </value>
                <value>
                    <fullName>Requested Capacity Planner</fullName>
                </value>
                <value>
                    <fullName>Requested Contact</fullName>
                </value>
                <value>
                    <fullName>Requested Demo</fullName>
                </value>
                <value>
                    <fullName>Requested Pricing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Confirmed_Stakeholder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Confirmed Stakeholder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_ID__c</fullName>
        <displayFormat>{000000}</displayFormat>
        <label>Contact ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Contact_Owner_text2__c</fullName>
        <formula>Owner.Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Owner (text)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_RR__c</fullName>
        <formula>MOD(VALUE(Contact_ID__c),2)+1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact RR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact_Region_Country_1__c</fullName>
        <label>Contact Region (Country 1)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Region_Country_2__c</fullName>
        <label>Contact Region (Country 2)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Region_State__c</fullName>
        <label>Contact Region (State)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Region__c</fullName>
        <formula>IF(AND(MailingState=&quot;&quot;,MailingCountry=&quot;&quot;),&quot;&quot;, 
IF(AND(Contact_Region_State__c&lt;&gt;&quot;&quot;,OR(UPPER(MailingCountry)=&quot;UNITED STATES&quot;, UPPER(SUBSTITUTE(MailingCountry,&quot;.&quot;,&quot;&quot;))=&quot;USA&quot;,UPPER(SUBSTITUTE(MailingCountry,&quot;.&quot;,&quot;&quot;))=&quot;US&quot;, UPPER(MailingCountry)=&quot;AMERICA&quot;,MailingCountry=&quot;&quot;)),Contact_Region_State__c, 
IF(Contact_Region_Country_1__c&lt;&gt;&quot;&quot;,Contact_Region_Country_1__c, 
IF(Contact_Region_Country_2__c&lt;&gt;&quot;&quot;,Contact_Region_Country_2__c, 
&quot;(no match)&quot;))))</formula>
        <label>Contact Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Role_for_Business_Development__c</fullName>
        <description>3rd party tracking for marketing</description>
        <label>Cloud Contact</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Safe_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <label>Contact Safe ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Status__c</fullName>
        <inlineHelpText>Use these status to remove contacts from your contact view when appropriate</inlineHelpText>
        <label>Contact Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Suspect</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Working</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contacts_for_NY_Event__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contacts for NY Event</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Core_Count__c</fullName>
        <label>Core Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Created_Date_for_Cohort_Analysis__c</fullName>
        <description>Contact created date for cohort analysis. Returns the lead created date if contact was created by a lead convert, or the contact created date if the contact was created directly.</description>
        <formula>if(isnull( Lead_CreatedDate__c ), datevalue( CreatedDate ), datevalue(Lead_CreatedDate__c ) )</formula>
        <label>Created Date for Cohort Analysis</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Created_by_Team__c</fullName>
        <formula>TEXT(CreatedBy.Team__c)</formula>
        <label>Created by Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Hypervisor__c</fullName>
        <description>for Corey 3PT</description>
        <label>Current Hypervisor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>VMware ESX(i)</fullName>
                </value>
                <value>
                    <fullName>Microsoft Hyper-V</fullName>
                </value>
                <value>
                    <fullName>OpenStack KVM</fullName>
                </value>
                <value>
                    <fullName>Red Hat Enterprise Virtualization</fullName>
                </value>
                <value>
                    <fullName>Nutanix Acropolis</fullName>
                </value>
                <value>
                    <fullName>Multiple Hypervisors</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Experience_Status__c</fullName>
        <label>Customer Experience Status</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Upper Management</fullName>
                </value>
                <value>
                    <fullName>Management</fullName>
                </value>
                <value>
                    <fullName>Engaged user</fullName>
                </value>
                <value>
                    <fullName>Involved but unengaged user</fullName>
                </value>
                <value>
                    <fullName>Control module target</fullName>
                </value>
                <value>
                    <fullName>Blocker</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_References_Geographical__c</fullName>
        <label>Customer References - Geographical</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_References__c</fullName>
        <label>Customer References</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Company_HQ_Address__c</fullName>
        <label>Company HQ Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Company_HQ_City__c</fullName>
        <label>Company HQ City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Company_HQ_Country_Code__c</fullName>
        <label>Company HQ Country Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Company_HQ_Country_Full_Name__c</fullName>
        <label>Company HQ Country (Full Name)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Company_HQ_Postal_Code__c</fullName>
        <label>Company HQ Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Company_HQ_State_Full_Name__c</fullName>
        <label>Company HQ State (Full Name)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Company_HQ_State__c</fullName>
        <label>Company HQ State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Conflict__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Conflict</label>
        <referenceTo>DSCORGPKG__Conflict__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__DeletedFromDiscoverOrg__c</fullName>
        <label>DeletedFromDiscoverOrg</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>false</fullName>
                    <default>true</default>
                    <label>false</label>
                </value>
                <value>
                    <fullName>true</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DSCORGPKG__DiscoverOrg_Company_ID__c</fullName>
        <label>DiscoverOrg Company ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__DiscoverOrg_Created_On__c</fullName>
        <label>Created by DiscoverOrg</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__DiscoverOrg_First_Update__c</fullName>
        <label>DiscoverOrg First Update</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__DiscoverOrg_FullCountryName__c</fullName>
        <label>DiscoverOrg Country Full Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__DiscoverOrg_ID__c</fullName>
        <label>DiscoverOrg ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__DiscoverOrg_LastUpdate__c</fullName>
        <label>DiscoverOrg Last Update</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__DiscoverOrg_State_Full_Name__c</fullName>
        <label>DiscoverOrg State Full Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__DiscoverOrg_Technologies__c</fullName>
        <label>DiscoverOrg Technologies</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Email_Invalid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Invalid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Exclude_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <description>User can use this checkbox to exclude record from getting updated from DiscoverOrg.</description>
        <label>Exclude from DiscoverOrg Auto Updates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__External_DiscoverOrg_Id__c</fullName>
        <externalId>true</externalId>
        <label>DiscoverOrg Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__ITOrgChart__c</fullName>
        <formula>IF(ISBLANK(Account.DSCORGPKG__DiscoverOrg_ID__c) = false, 
HYPERLINK( 
&apos;/apex/DSCORGPKG__itorgchart?co_id=&apos; +  Account.DSCORGPKG__DiscoverOrg_ID__c + &apos;&amp;scrollTo=&apos; +  DSCORGPKG__DiscoverOrg_ID__c , 
&apos;View&apos;, 
&apos;_blank&apos;) , 
&apos;N/A&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IT Org Chart</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Job_Function__c</fullName>
        <label>Job Function</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__LinkedIn_URL__c</fullName>
        <label>LinkedIn URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Locked_By_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Locked By User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Management_Level__c</fullName>
        <label>Management Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__MiddleName__c</fullName>
        <label>MiddleName</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__NickName__c</fullName>
        <label>NickName</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__REMOVELinkedinURL__c</fullName>
        <label>REMOVELinkedinURL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__ReportsTo__c</fullName>
        <label>DiscoverOrg ReportsTo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Twitter_URL__c</fullName>
        <label>Twitter URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__department__c</fullName>
        <label>DiscoverOrg Department</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__title_Custom__c</fullName>
        <label>title_Custom</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Demo_Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The rep the demo should be assigned to</inlineHelpText>
        <label>Demo Assigned To</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.UserRole.Name</field>
                <operation>contains</operation>
                <value>Account Executive</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Demo_Count__c</fullName>
        <label>Demo Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Demo_Date__c</fullName>
        <inlineHelpText>Demo Scheduled date for this contact</inlineHelpText>
        <label>Demo Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Demo_Notes__c</fullName>
        <label>Demo Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Demo_Sales_Engineer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The SE assigned to the Demo</description>
        <label>Demo Sales Engineer</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2 OR 3</booleanFilter>
            <errorMessage>The SE assigned must have the role of SE, ( - International, - US or US - Alliances)</errorMessage>
            <filterItems>
                <field>User.UserRoleId</field>
                <operation>equals</operation>
                <value>00ED0000001RI8U</value>
            </filterItems>
            <filterItems>
                <field>User.UserRoleId</field>
                <operation>equals</operation>
                <value>00E570000028QMJ</value>
            </filterItems>
            <filterItems>
                <field>User.UserRoleId</field>
                <operation>equals</operation>
                <value>00ED0000001RI8P</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dial_Count__c</fullName>
        <label>Dial Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dials_until_First_Conversation__c</fullName>
        <label># Dials until First Conversation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dials_until_First_Demo__c</fullName>
        <label># Dials until First Demo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Diamond_Add_Date__c</fullName>
        <label>Diamond Add Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Diamond__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Key person to talk to.</description>
        <label>Diamond</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Directly_Involved_with_Virtualization__c</fullName>
        <defaultValue>false</defaultValue>
        <description>for Corey 3PT</description>
        <label>Directly Involved with Virtualization</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DiscoverOrg_Company_ID_VMT__c</fullName>
        <label>DiscoverOrg Company ID (VMT)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DiscoverOrg_Employee_ID_VMT__c</fullName>
        <label>DiscoverOrg Employee ID (VMT)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Do_Not_Call_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Do Not Call Lookup</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Do Not Call Contacts</relationshipLabel>
        <relationshipName>Do_Not_Call</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Do_not_cold_call_account__c</fullName>
        <formula>IF(AND(
OR(
TEXT(Account.Rating)=&quot;Untouched&quot;,
TEXT(Account.Rating)=&quot;Cold&quot;,
TEXT(Account.Rating)=&quot;Target&quot;),
Account.Opps_all2__c=0),
&quot;OK to call&quot;,&quot;Do not call&quot;)</formula>
        <label>Do not cold call account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EULA_Acceptance_Date__c</fullName>
        <label>EULA Acceptance Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EULA_Agreement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EULA Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Earliest_Free_Download_Activation_Date__c</fullName>
        <formula>IF(AND(ISBLANK(First_Free_Version_Download_Date__c ),ISBLANK(First_Free_Version_Activation_Date__c)),NULL, 
IF(AND(NOT(ISBLANK(First_Free_Version_Download_Date__c )),ISBLANK(First_Free_Version_Activation_Date__c)),First_Free_Version_Download_Date__c, 
IF(AND(ISBLANK(First_Free_Version_Download_Date__c ),NOT(ISBLANK(First_Free_Version_Activation_Date__c))),First_Free_Version_Activation_Date__c, 
IF(First_Free_Version_Download_Date__c&lt;First_Free_Version_Activation_Date__c,First_Free_Version_Download_Date__c,First_Free_Version_Activation_Date__c))))</formula>
        <label>Earliest Free Download/Activation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Earliest_Full_Download_Activation_Date__c</fullName>
        <formula>IF(AND(ISBLANK(First_Full_Version_Download_Date__c ),ISBLANK(First_Full_Version_Activation_Date__c)),NULL, 
IF(AND(NOT(ISBLANK(First_Full_Version_Download_Date__c )),ISBLANK(First_Full_Version_Activation_Date__c)),First_Full_Version_Download_Date__c, 
IF(AND(ISBLANK(First_Full_Version_Download_Date__c ),NOT(ISBLANK(First_Full_Version_Activation_Date__c))),First_Full_Version_Activation_Date__c, 
IF(First_Full_Version_Download_Date__c&lt;First_Full_Version_Activation_Date__c,First_Full_Version_Download_Date__c,First_Full_Version_Activation_Date__c))))</formula>
        <label>Earliest Full Download/Activation Date</label>
        <type>DateTime</type>
    </fields>
</CustomObject>